30-tools/jenkins/prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.check-consulting.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jenkins
                port:
                  number: 80
  tls:
    - hosts:
        - jenkins.check-consulting.net
      secretName: jenkins.check-consulting.net.tls
